# table2ascii

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  task.env  tox.ini
.github/workflows/: lint.yml  python-app.yml  python-publish.yml  python-test.yml  python-update-docs.yml  test-docs.yml
docs/source/: api.rst  conf.py  generate_style_list.py  index.rst  styles.rst  usage.rst
docs/source/_static/css/: custom.css
docs/source/_static/js/: darkreader.min.js  toggleDarkMode.js
docs/source/_templates/: __init__.py  breadcrumbs.html  footer.html  layout.html  search.html  searchbox.html  versions.html
scripts/: style_list.py
style_list/: README.md  generate_style_list.py  style_list.py
table2ascii/: __init__.py  alignment.py  annotations.py  exceptions.py  merge.py  options.py  preset_style.py  py.typed  style.py  styles.py  table_style.py  table_to_ascii.py
tests/: test_alignments.py  test_cell_padding.py  test_column_widths.py  test_convert.py  test_heading_cols.py  test_merge.py  test_styles.py
