[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "table2ascii"
authors = [{name = "Jonah Lawrence", email = "jonah@freshidea.com"}]
dynamic = ["version", "description", "readme", "dependencies", "optional-dependencies"]
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["table", "ascii", "unicode", "formatter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Utilities",
    "Topic :: Text Processing :: General",
    "Topic :: Printing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]


[project.urls]
documentation = "https://table2ascii.rtfd.io"
issue-tracker = "https://github.com/DenverCoder1/table2ascii/issues"
repository = "https://github.com/DenverCoder1/table2ascii"


[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]


[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
filter_files = true


[tool.taskipy.tasks]
black = { cmd = "task lint black", help = "Run black" }
docs = { cmd = "cd docs && sphinx-autobuild source _build/html --ignore _build --watch ../table2ascii --port 8888", help = "Build the documentation on an autoreloading server."}
isort = { cmd = "task lint isort", help = "Run isort" }
lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
pyright = { cmd = "pyright", help = "Run pyright" }
slotscheck = { cmd = "python -m slotscheck --verbose -m table2ascii", help = "Run slotscheck" }
test = { cmd = "tox --skip-missing-interpreters", help = "Run tests" }


[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = false


[tool.pyright]
typeCheckingMode = "basic"
include = [
    "table2ascii",
    "tests",
    "*.py",
]
pythonVersion = "3.7"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportInvalidStringEscapeSequence = false
reportPropertyTypeMismatch = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportSelfClsParameterName = true
reportUnsupportedDunderAll = true
reportUnusedVariable = true
reportUnnecessaryComparison = true
reportUnnecessaryTypeIgnoreComment = true


[tool.mypy]
python_version = "3.11"
namespace_packages = true


[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "wcwidth"
]
ignore_missing_imports = true
